# pythonate

./: .gitignore  Makefile  README.md  modules.py  pyproject.toml  requirements.txt  setup.py
.github/: requirements.txt  setup.py
.github/workflows/: pypi-publish_manual.yml  pypi_publish_on_release.yml
examples/general/: general.py
examples/rest_api/: constants.py  server.py
examples/rest_api/controllers/: my_admin_controller.py  my_controller.py  my_controller_model.py
examples/rest_api/database/: my_database.py  my_database_model.py
examples/rest_api/repositories/: my_repository.py  my_repository_model.py
python8/: __init__.py  _version.py  checks.py  enums.py  json.py  objects.py  random.py  sorting.py  time.py
python8/config/: __init__.py  base_config_model.py  base_config_parser.py
python8/conversions/: __init__.py  international.py
python8/core/: conversions.py  crypto.py  dictionaries.py  files.py  general.py  objects.py  random.py  sorting.py  time.py  uuid.py  yaml.py
python8/database/: __init__.py  base.py  base_database.py  base_database_model.py  imports.py  utils.py
python8/internal/: __init__.py  constants.py  errors.py
python8/rest_api/: __init__.py  constants.py  notes.md  utils.py
python8/rest_api/controllers/: __init__.py  authentication.py  base_controller.py  base_controller_model.py
python8/rest_api/controllers/admin/: __init__.py  index.py
python8/rest_api/controllers/health/: __init__.py  index.py
python8/rest_api/database/: __init__.py  base_database.py  generic_secrets_model.py
python8/rest_api/repositories/: __init__.py  base_repository.py  base_repository_model.py
python8/rest_api/repositories/secrets/: __init__.py
python8/security/: __init__.py  encryption.py  gpg.py
python8/system/: __init__.py  stats.py
python8/web/: __init__.py  analytics.py  pastebin.py  requests.py
pythonate/: __init__.py  _info.py  _version.py  analytics.py  checks.py  dictionaries.py  dictionary.py  dropbox.py  encryption.py  enums.py  files.py  general.py  gpg.py  json.py  logs.py  objects.py  pastebin.py  random.py  requests.py  selector.py  sorting.py  sql.py  time.py  uuid.py
pythonate/conversions/: __init__.py  international.py  storage.py  temperature.py
pythonate/data/: __init__.py  sql.py
pythonate/internal/: __init__.py
pythonate/security/: __init__.py  encryption.py  gpg.py
pythonate/system/: __init__.py  os.py  stats.py
pythonate/web/: __init__.py  analytics.py  pastebin.py  requests.py
