[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "python8"
version = "VERSIONADDEDBYGITHUB"
description = "General purpose helper functions and classes for Python3 projects"
readme = "README.md"
authors = [
    { name = "Nate Harris", email = "nwithan8@users.noreply.github.com" }
]
license = { text = "GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.7, <4"
keywords = [
    "Python",
    "Python3",
    "framework",
    "rest",
    "api",
    "flask",
    "pydantic",
    "SQLAlchemy",
    "requests",
    "SQL",
    "helper",
    "sorting",
    "unit conversion",
    "imperial",
    "metric",
    "storage",
    "temperature",
    "enum",
    "random",
    "uuid"
]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/nwithan8/pythonate"
Download = "https://github.com/nwithan8/pythonate/archive/refs/tags/VERSIONADDEDBYGITHUB.tar.gz"

[project.optional-dependencies]
config = [
    "pydantic"
]
conversions = [

]
database = [
    "sqlalchemy",
    "sqlalchemy-utils",
    "sqlitedict"
]
rest_api = [
    "python8[config]",
    "python8[database]",
    "pydantic",
    "flask"
]
security = [
    "cryptography",
    "gnupg"
]
system = [
    "psutil"
]
web = [
    "objectrest"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",
    "examples"
]

[tool.setuptools]
include-package-data = true

